# game-engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  GL_EXTENSIONS.txt  README.md  appveyor.yml  appveyor_before_build.bat  build.bat  design.h  gen_gl_header.bat  travis_before_build.sh  update_modules.bat
src/: main.cpp
src/game/: main.cpp
src/game/components/: render.cpp  render.hpp
src/game/systems/: renderer.hpp
src/glare/: component.hpp  ecs.hpp  entity.cpp  entity.hpp  error.hpp  factory.hpp  game.cpp  game.hpp  glare.hpp  opengl_impl.hpp  resource.hpp  slot_map.hpp  system.hpp  utility.hpp  video.hpp  window.cpp  window.hpp
src/main/: design.hpp  error.hpp  main.cpp  window.cpp  window.hpp
src/shaders/: main.frag  main.vert
src/tests/: test_entity_manager.cpp  test_slot_map.cpp
